name:                jediserver
version:             0.1.0.0
synopsis:            Websocket server for the flux-challenge
description:         Please see README.md
homepage:            https://github.com/githubuser/jediserver#readme
license:             BSD3
license-file:        LICENSE
author:              André Ryser
maintainer:          andre.ryser@gmail.com
copyright:           2016 André Ryser
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable jediserver
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , wai >= 3.2.1.1
                     , http-types >= 0.9.1
                     , websockets >= 0.9.6.1
                     , warp >= 3.2
                     , wai-websockets >= 3.0.0.9
                     , simple >= 0.11.1
                     , text >= 1.2.2.1
                     , url >= 2.1.3
                     , bytestring >= 0.10.6.0
                     , containers >= 0.5.6.2
                     , transformers >= 0.4.2.0
                     , random >= 1.1
                     , aeson >= 0.11.2.0
                     , listsafe >= 0.1.0.1
